src/kubernetes/perian/manifests/mineos/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mineos-service
  namespace: perian-mineos
spec:
  selector:
    app: mineos
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
