src/kubernetes/perian/manifests/mineos/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mineos-ingress
  namespace: perian-mineos
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/limit-rpm: "100"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.tls: "false"
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
    - host: mineos.kidd.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mineos-service
                port:
                  number: 80
